istiofiles/frontend-vs-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruit-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits-catalog
spec:
  hosts:
  - "*"
  gateways:
  - fruit-gateway
  http:
    - route:
      - destination:
          host: frontend
          subset: v1
        weight: 50
      - destination:
          host: frontend
          subset: v2
        weight: 50
