istiofiles/mongodb-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongodb
spec:
  hosts:
  - mongodb
  tcp:
  - route:
    - destination:
      host: mongodb
      port:
        number: 27017
      subset: v1
